# stitch-scripts-templates

./: Makefile  Pipfile  README.md  clear-notebook-metadata.py  pyproject.toml  update-front-matter.py
templates/add_sort_dist_keys_redshift/: template.ipynb
templates/audit_sfdc_fields_snowflake/: template.ipynb
templates/bare/: template.ipynb
templates/flatten_data_snowflake/: template.ipynb
templates/get_results_and_store_in_table_snowflake/: template.ipynb
templates/make_api_request/: template.ipynb
templates/minimal_bigquery/: template.ipynb
templates/minimal_postgres/: template.ipynb
templates/minimal_postgresql/: template.ipynb
templates/minimal_snowflake/: template.ipynb
templates/send_data_from_postgres_to_sfdc/: template.ipynb
templates/specific_table_loads/: template.ipynb
templates/summary_tables_redshift/: template.ipynb
templates/table_snapshot_bigquery/: template.ipynb
templates/transform_table_snowflake/: template.ipynb
templates/trigger_sinter/: template.ipynb
