[tool.poetry]
name = "stitch-scripts-templates"
version = "0.1.0"
description = ""
authors = ["Stitch <dev@stitchdata.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.3"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
